--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Font Awesome Library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
-<body>
+<body id="home">
     <!-- Start header -->
     <header>
         <div class="container">
@@ -84,7 +84,7 @@
                         </p>
                     </div>
             </div>
-            <div class="card">
+<!--             <div class="card">
                 <i class="fa-solid fa-truck"></i>
                     <div class="text">
                         <h3>service 4</h3>
@@ -93,7 +93,7 @@
                         disciplines in the production and maintenance of websites.
                         </p>
                     </div>
-            </div>
+            </div> -->
         </div>
         </div>
         </div>
