--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Font Awesome Library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
-<body id="home">
+<body>
     <!-- Start header -->
     <header>
         <div class="container">
@@ -51,7 +51,7 @@
     <section class="service" id="service">
         <div class="container">
             <div class="cards">
-                <div class="col">
+                
                     <div class="card srv1">
                         <i class="fa-solid fa-car"></i>
                         <div class="text">
@@ -72,8 +72,6 @@
                                 </p>
                             </div>
                         </div>
-                </div>
-        <div class="col">
             <div class="card">
                 <i class="fa-solid fa-code"></i>
                     <div class="text">
@@ -84,19 +82,8 @@
                         </p>
                     </div>
             </div>
-<!--             <div class="card">
-                <i class="fa-solid fa-truck"></i>
-                    <div class="text">
-                        <h3>service 4</h3>
-                        <p>
-                        Web design encompasses many different skills and 
-                        disciplines in the production and maintenance of websites.
-                        </p>
-                    </div>
-            </div> -->
-        </div>
-        </div>
-        </div>
+            </div><!--cards-->
+        </div><!--cotainer-->
     </section>
 <!-- end service -->
 
